--- a/k8s-charm/src/nginx.conf.j2
+++ b/k8s-charm/src/nginx.conf.j2
@@ -4,10 +4,10 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-    listen 8080 default_server;
-    listen [::]:8080 default_server;
+    listen {{port}} default_server;
+    listen [::]:{{port}} default_server;
 
-    root {{dashboard_root}}/src/dist;
+    root {{dashboard_root}};
     index index.html;
 
     server_name _;
