--- a/k8s-charm/src/config.js.j2
+++ b/k8s-charm/src/config.js.j2
@@ -11,4 +11,6 @@ var jujuDashboardConfig = {
   // only be used for superficial updates like logos. Use feature detection
   // for other environment features.
   isJuju: {{is_juju | bool | tojson}},
+  // If true, then Google Analytics and Sentry data will be sent.
+  analyticsEnabled: {{analytics_enabled | bool | tojson}},
 };
